// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`portable > Component > Elements of type ReactElement will be also rendered in the template when rpPreviewDispatchers will be called 1`] = `
<div>
  <rp-preview
    code="foo"
    id="dummy-uuid"
  >
    <rp-preview-area>
      <div>
        sample with children:
        <div>
          children
        </div>
         
        <div>
          element
        </div>
      </div>
    </rp-preview-area>
    <template>
      <rp-outlet
        _key="children"
      >
        <div>
          children
        </div>
      </rp-outlet>
      <rp-outlet
        _key="element"
      >
        <div>
          element
        </div>
      </rp-outlet>
    </template>
  </rp-preview>
</div>
`;

exports[`portable > Component > It will be wrapped by <rp-preview /> when rpPreviewDispatchers will be called 1`] = `
<DocumentFragment>
  <rp-preview
    code="foo"
    id="dummy-uuid"
  >
    <rp-preview-area>
      <div>
        sample
      </div>
    </rp-preview-area>
    <template />
  </rp-preview>
</DocumentFragment>
`;

exports[`portable > Component.__forQwik > \`__outlet__\` is converted to <rp-outlet /> and rendered 1`] = `
<DocumentFragment>
  <div>
    sample with children:
    <rp-slot
      _key="children"
    />
     
    <rp-slot
      _key="element"
    />
  </div>
</DocumentFragment>
`;
